--- a/CSS/style.css
+++ b/CSS/style.css
@@ -306,7 +306,7 @@
 }
 
 .leafs {
-    background-image: url("/images/Leafs_bg.jpg");
+    background-image: url("../images/Leafs_bg.jpg");
     background-size: cover;
     min-height: 600px;
     position: relative;
@@ -355,7 +355,7 @@
 
 
 .star_fall {
-    background-image: url("/images/Mount_bg.jpg");
+    background-image: url("../images/Mount_bg.jpg");
     background-size: cover;
     min-height: 600px;
     position: relative;
